--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "parcel-stylus-bp",
+  "name": "one-page-bp",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,8 +9,8 @@
     "start": "npm run parcels & npm run stylus"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Bushflame/parcel-stylus-bp.git"
+    "type": "git"
+
   },
   "keywords": [
     "parcel",
@@ -23,6 +23,7 @@
     "src": "^1.1.2"
   },
   "devDependencies": {
-    "cssnano": "^4.0.5"
+    "cssnano": "^4.0.5",
+    "nib": "^1.1.2"
   }
 }
